Adding the About Me section

--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,17 @@
     <title>KADIM AHMED - PORTFOLIO</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
   </head>
@@ -45,5 +54,55 @@
         </ul>
       </div>
     </nav>
+    <div class="resume-wrapper">
+      <div class="resume-section resume-section--p-left-3">
+        <div class="about-me-section">
+          <h1 class="about-me-section__heading mb-0">Kadim Ahmed</h1>
+          <div class="about-me-section__subheading mb-5">
+            Full Stack Web Developer
+          </div>
+          <p class="mb-5">
+            I am a seasoned full stack developer with expertise in all phases of
+            the development lifecycle for dynamic web applications. I am
+            well-versed in various web technologies, including HTML, CSS,
+            JavaScript, Angular/React, and Java/Spring Boot.
+          </p>
+          <div class="socials">
+            <a
+              href="https://www.linkedin.com/in/kadim-ahmed-0b3420231/"
+              class="socials__link"
+              target="_blank"
+            >
+              <span class="fa-stack socials--lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+            <a
+              href="https://github.com/akadim"
+              class="socials__link"
+              target="_blank"
+            >
+              <span class="fa-stack socials--lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="resume-section">
+        <div class="experience-section"></div>
+      </div>
+      <div class="resume-section">
+        <div class="education-section"></div>
+      </div>
+      <div class="resume-section">
+        <div class="skills-section"></div>
+      </div>
+      <div class="resume-section">
+        <div class="projects-section"></div>
+      </div>
+    </div>
   </body>
 </html>
