Adding the Experience and Education section

--- a/app/index.html
+++ b/app/index.html
@@ -54,8 +54,8 @@
         </ul>
       </div>
     </nav>
-    <div class="resume-wrapper">
-      <div class="resume-section resume-section--p-left-3">
+    <div class="portfolio-wrapper">
+      <div class="portfolio-section portfolio-section--p-left-3">
         <div class="about-me-section">
           <h1 class="about-me-section__heading mb-0">Kadim Ahmed</h1>
           <div class="about-me-section__subheading mb-5">
@@ -91,16 +91,132 @@
           </div>
         </div>
       </div>
-      <div class="resume-section">
-        <div class="experience-section"></div>
+      <div class="portfolio-section">
+        <div class="experience-section portfolio-section--p-left-3">
+          <h2 class="section-title mb-5">Experience</h2>
+          <div class="portfolio-item mb-5">
+            <div class="portfolio-content">
+              <h3 class="mb-0 mt-0">Web Developer</h3>
+              <div class="subheading mb-1">Career Break (due to Layoff)</div>
+              <p>
+                After a career-defining layoff, I decided to take a
+                well-deserved break to reassess my career goals and priorities.
+                During this time, I focused on improving my full stack
+                development skills to ensure I would be prepared for a
+                successful comeback.
+              </p>
+            </div>
+            <div class="portfolio-date">
+              <span>February 2024 - Present</span>
+            </div>
+          </div>
+          <div class="portfolio-item mb-5">
+            <div class="portfolio-content">
+              <h3 class="mb-0">Web Developer</h3>
+              <div class="subheading mb-1">Autorabit - Prague</div>
+              <ul>
+                <li>
+                  Creating a web project that optimizes Salesforce DevOps's
+                  experience.
+                </li>
+                <li>
+                  Technologies used: HTML5, CSS3, Javascript/Typescript,
+                  Angular, Java/Spring Boot
+                </li>
+              </ul>
+            </div>
+            <div class="portfolio-date">
+              <span>November 2022 - 02/2024</span>
+            </div>
+          </div>
+          <div class="portfolio-item mb-5">
+            <div class="portfolio-content">
+              <h3 class="mb-0">Web Developer / UI Programmer</h3>
+              <div class="subheading mb-1">
+                Bohemia Interactive Simulation - Prague
+              </div>
+              <ul>
+                <li>
+                  Creating and managing different gaming-related web projects.
+                </li>
+                <li>
+                  Technologies used: HTML5, CSS3, Javascript/Typescript, Angular
+                </li>
+              </ul>
+            </div>
+            <div class="portfolio-date">
+              <span>February 2020 - November 2022</span>
+            </div>
+          </div>
+          <div class="portfolio-item mb-5">
+            <div class="portfolio-content">
+              <h3 class="mb-0">Web Developer</h3>
+              <div class="subheading mb-1">CN Group - Prague</div>
+              <ul>
+                <li>
+                  Creating and managing different web applications of different
+                  customers (Healthcare, Finance, Magazine, etc..).
+                </li>
+                <li>
+                  technologies used: HTML5, CSS3, Javascript/Typescript,
+                  Angular, Java/Spring Boot
+                </li>
+              </ul>
+            </div>
+            <div class="portfolio-date">
+              <span>February 2020 - November 2022</span>
+            </div>
+          </div>
+          <div class="portfolio-item">
+            <div class="portfolio-content">
+              <h3 class="mb-0">Freelance Web Developer</h3>
+              <div class="subheading mb-1">MOSTAQL - Casablanca</div>
+              <ul>
+                <li>
+                  Creating and managing the lifecycle of different projects in
+                  the freelance platform MOSTAQL.
+                </li>
+                <li>
+                  Technologies used: HTML5, CSS3, Javascript/Typescript, React
+                  and Java/Spring Boot
+                </li>
+              </ul>
+            </div>
+            <div class="portfolio-date">
+              <span>February 2020 - November 2022</span>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="resume-section">
-        <div class="education-section"></div>
+      <div class="portfolio-section">
+        <div class="education-section portfolio-section--p-left-3">
+          <h2 class="section-title mb-5">Education / Certification</h2>
+          <div class="portfolio-item mb-5">
+            <div class="portfolio-content">
+              <h3 class="mb-0 mt-0">FST Settat University</h3>
+              <div class="subheading mb-1">Bachelor Degree</div>
+              <p>Computer Science - Software Engineering Track</p>
+            </div>
+            <div class="portfolio-date">
+              <span>November 2011 - June 2012</span>
+            </div>
+          </div>
+          <div class="portfolio-item mb-5">
+            <div class="portfolio-content">
+              <h3 class="mb-0 mt-0">Udacity</h3>
+              <div class="subheading mb-1">Nanodegree Certification</div>
+              <p>Front-End Developer Track</p>
+            </div>
+            <div class="portfolio-date">
+              <span>November 2018 - April 2019</span>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="resume-section">
+      <div class="portfolio-section">
         <div class="skills-section"></div>
       </div>
-      <div class="resume-section">
+      <div class="portfolio-section">
         <div class="projects-section"></div>
       </div>
     </div>
