Adding Skills section

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,11 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
   </head>
   <body>
     <nav class="site-nav site-nav--black">
@@ -55,18 +60,19 @@
       </div>
     </nav>
     <div class="portfolio-wrapper">
-      <div class="portfolio-section portfolio-section--p-left-3">
+      <div class="portfolio-section vertical-centered p-3">
         <div class="about-me-section">
           <h1 class="about-me-section__heading mb-0">Kadim Ahmed</h1>
-          <div class="about-me-section__subheading mb-5">
+          <div class="about-me-section__subheading mb-3">
             Full Stack Web Developer
           </div>
-          <p class="mb-5">
+          <p class="mb-3">
             I am a seasoned full stack developer with expertise in all phases of
             the development lifecycle for dynamic web applications. I am
             well-versed in various web technologies, including HTML, CSS,
             JavaScript, Angular/React, and Java/Spring Boot.
           </p>
+
           <div class="socials">
             <a
               href="https://www.linkedin.com/in/kadim-ahmed-0b3420231/"
@@ -88,13 +94,20 @@
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
               </span>
             </a>
+            <a
+              href="assets/docs/CV-KADIM-Ahmed.docx"
+              target="_blank"
+              class="download-btn mb-1"
+            >
+              Download CV
+            </a>
           </div>
         </div>
       </div>
       <div class="portfolio-section">
-        <div class="experience-section portfolio-section--p-left-3">
-          <h2 class="section-title mb-5">Experience</h2>
-          <div class="portfolio-item mb-5">
+        <div class="experience-section p-3">
+          <h2 class="section-title mb-3">Experience</h2>
+          <div class="portfolio-item mb-3">
             <div class="portfolio-content">
               <h3 class="mb-0 mt-0">Web Developer</h3>
               <div class="subheading mb-1">Career Break (due to Layoff)</div>
@@ -110,9 +123,9 @@
               <span>February 2024 - Present</span>
             </div>
           </div>
-          <div class="portfolio-item mb-5">
+          <div class="portfolio-item mb-3">
             <div class="portfolio-content">
-              <h3 class="mb-0">Web Developer</h3>
+              <h3 class="mb-0 mt-0">Web Developer</h3>
               <div class="subheading mb-1">Autorabit - Prague</div>
               <ul>
                 <li>
@@ -129,9 +142,9 @@
               <span>November 2022 - 02/2024</span>
             </div>
           </div>
-          <div class="portfolio-item mb-5">
+          <div class="portfolio-item mb-3">
             <div class="portfolio-content">
-              <h3 class="mb-0">Web Developer / UI Programmer</h3>
+              <h3 class="mb-0 mt-0">Web Developer / UI Programmer</h3>
               <div class="subheading mb-1">
                 Bohemia Interactive Simulation - Prague
               </div>
@@ -148,9 +161,9 @@
               <span>February 2020 - November 2022</span>
             </div>
           </div>
-          <div class="portfolio-item mb-5">
+          <div class="portfolio-item mb-3">
             <div class="portfolio-content">
-              <h3 class="mb-0">Web Developer</h3>
+              <h3 class="mb-0 mt-0">Web Developer</h3>
               <div class="subheading mb-1">CN Group - Prague</div>
               <ul>
                 <li>
@@ -169,7 +182,7 @@
           </div>
           <div class="portfolio-item">
             <div class="portfolio-content">
-              <h3 class="mb-0">Freelance Web Developer</h3>
+              <h3 class="mb-0 mt-0">Freelance Web Developer</h3>
               <div class="subheading mb-1">MOSTAQL - Casablanca</div>
               <ul>
                 <li>
@@ -188,10 +201,10 @@
           </div>
         </div>
       </div>
-      <div class="portfolio-section">
-        <div class="education-section portfolio-section--p-left-3">
-          <h2 class="section-title mb-5">Education / Certification</h2>
-          <div class="portfolio-item mb-5">
+      <div class="portfolio-section pt-5 p-3">
+        <div class="education-section">
+          <h2 class="section-title mb-3">Education / Certification</h2>
+          <div class="portfolio-item mb-3">
             <div class="portfolio-content">
               <h3 class="mb-0 mt-0">FST Settat University</h3>
               <div class="subheading mb-1">Bachelor Degree</div>
@@ -201,7 +214,7 @@
               <span>November 2011 - June 2012</span>
             </div>
           </div>
-          <div class="portfolio-item mb-5">
+          <div class="portfolio-item mb-3">
             <div class="portfolio-content">
               <h3 class="mb-0 mt-0">Udacity</h3>
               <div class="subheading mb-1">Nanodegree Certification</div>
@@ -213,8 +226,59 @@
           </div>
         </div>
       </div>
-      <div class="portfolio-section">
-        <div class="skills-section"></div>
+      <div class="portfolio-section vertical-centered pt-5 p-3">
+        <div class="skills-section">
+          <h2 class="section-title mb-3">Skills</h2>
+          <div class="subheading mb-3">Programming Languages and Tools</div>
+          <div class="skills mb-3">
+            <div class="skill">
+              <i class="devicon-html5-plain colored"></i>
+            </div>
+            <div class="skill">
+              <i class="devicon-css3-plain colored"></i>
+            </div>
+            <div class="skill">
+              <i class="devicon-javascript-plain colored"></i>
+            </div>
+            <div class="skill">
+              <i class="devicon-webpack-plain colored"></i>
+            </div>
+            <div class="skill">
+              <i class="devicon-tailwindcss-original colored"></i>
+            </div>
+            <div class="skill">
+              <i class="devicon-angularjs-plain colored"></i>
+            </div>
+            <div class="skill">
+              <i class="devicon-react-original colored"></i>
+            </div>
+            <div class="skill">
+              <i class="devicon-java-plain colored"></i>
+            </div>
+            <div class="skill">
+              <i class="devicon-spring-original colored"></i>
+            </div>
+          </div>
+          <div class="subheading mb-1">Workflow</div>
+          <ul class="fa-ul Workflow-list">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Mobile-First, Responsive Design
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Agile Development - Scrum
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Cross Browser Testing & Debugging
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Cross Browser Testing & Debugging
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="portfolio-section">
         <div class="projects-section"></div>
